--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 bytes = "1.10.1"
-iced = { version = "0.13.1", features = ["image"] }
+iced = { version = "0.13.1", features = ["image", "canvas"] }
 num = "0.4.3"
 threadpool = "1.8.1"
